--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- TODO: Link your stylesheet -->
+    <Link rel="stylesheet" href="index.css">
   </head>
   <body>
     <p>Assignment 1</p>
@@ -20,22 +20,47 @@
     <!-- TODO: Insert div elements in the next 7 wrappers for your solution -->
     <p>Student TODOs</p>
     <p>Row 3</p>
-    <div class="wrapper">
+    <div class="wrapperThree">
+      <div class="redThree"></div>
+      <div class="blueThree"></div>
     </div>
+
+
     <p>Row 4</p>
-    <div class="wrapper">
+    <div class="wrapperFour">
+      <div class="emptyExample2">
+        <div class="blueExample2"></div>
+      </div>
     </div>
+
+
     <p>Row 5</p>
-    <div class="wrapper">
+    <div class="wrapperFive">
+      <div class="redFive"></div>
     </div>
+
     <p>Row 6</p>
-    <div class="wrapper">
+    <div class="wrapperSix">
+      <div class="redSix"></div>
+      <div class="blueSix"></div>
+      <div class="redSix"></div>
     </div>
+
+
     <p>Row 7</p>
-    <div class="wrapper">
+    <div class="wrapperSeven">
+      <div class="redSeven"></div>
+      <div class="blueSeven">
+        <div class="greenSeven"></div>
+      </div>
     </div>
     <p>Row 8</p>
-    <div class="wrapper">
+    <div class="wrapperEight">
+      <div class="orangeEight"></div>
+      <div class="orangeEight"></div>
+      <div class="orangeEight"></div>
+      <div class="orangeEight"></div>
+      <div class="orangeEight"></div>
     </div>
     <p>Row 9</p>
     <div class="wrapper">
